--- a/params.tex
+++ b/params.tex
@@ -1,2 +1,10 @@
-\newcommand{\myemail}{brisk.bell8333@tenesm.us}
-\newcommand{\myrole}{devops}
+\newcommand{\MyEmail}{brisk.bell8333@tenesm.us}
+\newcommand{\MyTitle}{Senior DevOps Engineer}
+\newcommand{\MyFirstName}{Nathan}
+\newcommand{\MyLastName}{Douglas}
+\newcommand{\MyFullName}{Nathan Douglas}
+\newcommand{\MyPhoneNumber}{(330) 998-8049}
+\newcommand{\MyPhoneNumberPlain}{+13309988049}
+\newcommand{\MyWebsite}{darkdell.net}
+\newcommand{\MyLinkedInUsername}{nug-doug}
+\newcommand{\MyGitHubUsername}{ndouglas}
