--- a/resume.tex
+++ b/resume.tex
@@ -25,21 +25,8 @@
 % Set the page style to empty.
 \pagestyle{empty}
 
-% Hyperref setup
-\hypersetup{
-  colorlinks,%
-  citecolor=black,%
-  filecolor=black,%
-  linkcolor=black,%
-  urlcolor=mygreylink,%
-}
-
 % URL style
 \urlstyle{same}
-
-% Define colors
-\definecolor{mygrey}{gray}{.85}
-\definecolor{mygreylink}{gray}{.40}
 
 % Height of the text area of the page
 \textheight=9.0in
@@ -58,19 +45,19 @@
 \begin{document}
 
 % Header with personal information
-\myheader
+\MyHeader
 
 % Things I did
 \subsection*{Experience}
-\myexperience
+\MyExperience
 
 % Things I learned
 \subsection*{Education}
-\myeducation
+\MyEducation
 
 % Things I can do
 \subsection*{Skills}
-\myskills
+\MySkills
 
 % End the document
 \end{document}
